   -- Removed FRACTAL_... gamedefs - these things are now handled by game
      specific code in map.cpp
   -- Created economy.cpp in the main directory and moved economy-related code
      from aregion.cpp into economy.cpp.
   -- Tidied up market setup: markets now have a fixed number of normal-type
      buy/sell items. The items are now related to the racial skills and
      the produceable resources in the region. This removes a lot of the
      weapons and tools on sale in the game.
   -- Changed the way market activity figures in town growth. Only grain and
      livestock as well as trade items are needed for town growth - all other
      items can be traded for extra gain as a replacement for untraded grain
      or livestock.
   -- Added code to create City Guards from normal men if LEADER_EXIST isn't
      set.
   -- MakeManUnit(..) function in npc.cpp now helps with setting up
      npc units consisting of normal men, their weapons and armor (if any).
      The idea is that the same code can be used to easily create roaming
      npc units later on...
   -- Fixed NameRegions() in the fractal set-up (in the kingdoms game).
   -- Added a gamedef ADVANCED_FORTS which implements the fort modification
      to attack chance idea. See gamdefs.h for details. Nothing done about
      routing or any other suggestions connected to forts yet.
   -- Added some gamedefs that allow incremental calculation of tax income rather
      than getting all-or-nothing. TAX_INCOME has been replaced by TAX_BASE_INCOME,
      and there's TAX_BONUS_WEAPON for weapons, TAX_BONUS_ARMOR and TAX_BONUS_FORT.
      The weapons usable by TAX_WEAPON_BONUS are determined by the setting of
      the WHO_CAN_TAX gamedef. Note that only units that are basically able to
      tax will receive ANY silver. *Still need to update genrules.cpp to reflect
      this in detail!*
   -- Put the tax-relevant gamedefs into one place.