@@ -79,3 +79,5 @@ Joseph Traub
 	Implemented quartermasters and TRANSPORT/DISTRIBUTE
 Peter Christie
 	Added coracles (a boat smaller than a longboat)
+Bradley "Starstrike"
+	Updated the editing code
